More robust scripted tests
I've updated SBT to 0.13.8 and used the trick described in Eugene's
response on [this SO post][so] to ensure the tests are always running
against the latest versions of the SBT plugins.

[so]: http://stackoverflow.com/questions/19102208/how-to-test-sbt-plugins